# bettercallsol

./: .firebaserc  .gitignore  .releaserc  CONTRIB.md  README.md  SECURITY.md  config-overrides.js  generate-validator.cjs  index.html  package-lock.json  package.json  release.config.js  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.md
.github/actions/: slack.yml
.github/workflows/: build.yml  deploy.yml  pull-request.yml  pull-request.yml.ignore
cypress/: .eslintrc.json
cypress/e2e/: connect-wallet.cy.ts  run-example.cy.ts  start.cy.ts
cypress/support/: e2e.ts
icon/: logo.xcf
public/: index.html
scripts/: generate-validator.cjs  license-report.js
share-program/: Anchor.toml  README.md  package.json
share-program/client/: client.ts
share-program/programs/bettercallsol/: Cargo.toml
share-program/programs/bettercallsol/src/: errors.rs  lib.rs
share-program/tests/: bettercallsol.ts
src/: App.tsx  chakra.ts  env.d.ts  index.tsx  state.ts  store.ts  theme.ts  web3.ts
src/coders/: borsh.ts  buffer-layout.ts  index.ts
src/components/: App.tsx  ColorModeSwitcher.tsx  Footer.tsx  Header.tsx  ImportModal.tsx  README.md  ShareModal.tsx  SideBar.tsx  TopBar.tsx
src/hooks/: clockwork.ts  squads.ts  useAccount.ts  useAccountType.ts  useAnchorProvider.ts  useConfigStore.ts  useGetWeb3Transaction.ts  useImport.ts  useImportFromUrl.ts  useInstruction.ts  useInstructionDataField.ts  useMemoryOnlyStore.ts  useOptionsStore.ts  usePersistentStore.ts  useSendWeb3Transaction.ts  useSessionStore.ts  useTransaction.ts  (+6 more)
(+168 files in other folders)
